feature: add mind & inspiration
